# picky

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md
src/: config.rs  console.rs  git.rs  hook.rs  lib.rs  main.rs  patch.rs  refcache.rs  sparse.rs
src/commands/: add.rs  completions.rs  doctor.rs  gc.rs  init.rs  mod.rs  refresh.rs  remove.rs  sparse.rs  status.rs  update.rs
tests/: integration.rs
